# bigquery-agent

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml
.streamlit/: config.toml
agent/: __init__.py  graph.py  nodes.py  prompts.py  state.py  tools.py  utils.py
api/: __init__.py  main.py  schemas.py
config/: logging.yaml  settings.py
dashboard/: app.py
scripts/: deploy.sh  run_local.sh  seed_sample_data.py  setup_gcp.sh
tests/: __init__.py  test_agent.py  test_tools.py
